<resources>
    <string name="app_name">ProjectTemplate</string>
    <string name="facebook_app_id">1809860379260560</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_userRegistration">User Not registered,   please try again after some time.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_loader_loading_users">Loading Users...</string>
    <string name="hint_aregister_firstname">E-Mail ID</string>
    <string name="hint_fregister_email">E-Mail ID</string>
    <string name="hint_fregister_password">Password</string>
    <string name="hint_fregister_repassword">Re-Enter Password</string>
    <string name="btn_aregister_register">Register</string>
    <string name="message_loader_registering">Registering User...</string>
    <string name="message_loader_logging">Logging In...</string>
    <string name="btn_flogin_register">Create An Account</string>
    <string name="btn_alogin_google">Google</string>
    <string name="btn_alogin_facebook">Facebook</string>
    <string name="btn_alogin_login">Login</string>
    <string name="message_loader_loading_albums">Loading Albums...</string>

    <string name="msg_enterFirstName">Please Enter FirstName</string>
    <string name="msg_enterLastName">Please Enter LastName</string>

    <string name="msg_enterTitle">Please Enter title</string>
    <string name="msg_enterUserId">Please Enter userId</string>
    <string name="hint_albumId">Album Id</string>
    <string name="hint_userId">User Id</string>
    <string name="hint_title">Title</string>
    <string name="error_enterEmailAddress">Please enter E-Mail Address</string>
    <string name="error_enterValidEmailAddress">Please enter valid email address.</string>
    <string name="error_enterPassword">Please enter password</string>
</resources>
