<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>

        <variable
            name="event"
            type="com.cygnet.projecttemplate.views.fragments.LoginFragment"/>

    </data>

    <RelativeLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.cygnet.projecttemplate.views.widgets.CustomEditText
                android:id="@+id/aLogin_edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fregister_email"
                android:text="a@a.com"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_username"
            android:layout_marginTop="@dimen/spacing_standard" >

            <com.cygnet.projecttemplate.views.widgets.CustomEditText
                android:id="@+id/aLogin_edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_fregister_password"
                android:text="123456"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/aLogin_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/input_layout_password"
            android:layout_marginTop="@dimen/spacing_control"
            android:background="@color/colorPrimary"
            android:text="@string/btn_alogin_login"
            android:textColor="@android:color/white"
            android:onClick="@{ () -> event.onClickLogin()}"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aLogin_btnLogin"
            android:layout_marginTop="@dimen/spacing_activity_container"
            android:orientation="horizontal" >

            <com.cygnet.projecttemplate.views.widgets.CustomButton
                android:id="@+id/aLogin_btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_alogin_facebook"
                android:textColor="@android:color/white"
                android:onClick="@{ () -> event.onClickFacebookLogin()}"/>

            <com.cygnet.projecttemplate.views.widgets.CustomButton
                android:id="@+id/aLogin_btnGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_control"
                android:layout_marginStart="@dimen/spacing_control"
                android:layout_weight="0.5"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_alogin_google"
                android:textColor="@android:color/white"
                android:onClick="@{ () -> event.onClickGmailLogin()}"/>
        </LinearLayout>

        <com.cygnet.projecttemplate.views.widgets.CustomButton
            android:id="@+id/fLogin_btnNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/design_snackbar_background_color"
            android:text="@string/btn_flogin_register"
            android:textColor="@android:color/white"
            android:onClick="@{ () -> event.onClickRegister()}"/>

    </RelativeLayout>
</layout>